# indors_test_task

./: README.md  pyproject.toml  setup.cfg
backend/the_cats_app/: manage.py
backend/the_cats_app/api/: serializers.py  urls.py  views.py
backend/the_cats_app/cats/: models.py  serializers.py  urls.py  views.py
backend/the_cats_app/cats/migrations/: 0001_initial.py  0003_remove_cat_birth_date_cat_years.py  0004_remove_cat_years_cat_birth_year.py  0005_cat_unique_name_owner.py
backend/the_cats_app/the_cats_app/: settings.py
backend/the_cats_app/users/: views.py
backend/the_cats_app/users/migrations/: 0001_initial.py
frontend/the_cats/: README.md  angular.json  package-lock.json  package.json
frontend/the_cats/src/: index.html
frontend/the_cats/src/app/: api.service.ts  app.component.spec.ts  app.component.ts  data.service.ts
the_cats_app/cats/: models.py  permissions.py  serializers.py  urls.py  views.py
the_cats_app/cats/migrations/: 0002_cat_owner.py
the_cats_app/the_cats_app/: asgi.py  settings.py  urls.py  wsgi.py
the_cats_app/users/: serializers.py  urls.py
